# ps_admin_new

./: ERROR_HANDLING_GUIDE.md  README.md  pubspec.yaml
android/: build.gradle  gradle.properties  settings.gradle
android/app/: build.gradle  google-services.json  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
assets/database/: pa_systems_stages.db
assets/fonts/Lato/: OFL.txt
flutter_usb_camera/: .gitignore  README.md  pubspec.yaml
flutter_usb_camera/android/: build.gradle  settings.gradle
flutter_usb_camera/android/src/main/: AndroidManifest.xml
flutter_usb_camera/android/src/main/cpp/: CMakeLists.txt  turbo_bridge.cpp  turbo_min.h
flutter_usb_camera/lib/: flutter_usb_camera.dart  flutter_usb_camera_platform_interface.dart
flutter_usb_camera/test/: flutter_usb_camera_method_channel_test.dart  flutter_usb_camera_test.dart
ios/: DD Cirtificate.p12  Podfile  WifiInfo.h
ios/Runner/: AppDelegate.swift  Info.plist  Runner-Bridging-Header.h  WifiInfo.swift
ios/Runner.xcodeproj/: project.pbxproj
lib/: injection_container.dart  main.dart  plugin_update  score_backup  test_z.dart
lib/admin_dashboard/data/datasources/: file_upload_remote_datasource.dart
lib/admin_dashboard/data/models/: ammunition_model.dart  firearm_model.dart
lib/admin_dashboard/data/repositories/: file_upload_repository_impl.dart
lib/admin_dashboard/domain/entities/: ammunition.dart  firearm.dart
lib/admin_dashboard/domain/repositories/: file_upload_repository.dart
lib/admin_dashboard/domain/usecases/: get_ammunitions_usecase.dart  get_firearms_usecase.dart  upload_ammunition_usecase.dart  upload_firearm_usecase.dart
lib/admin_dashboard/presentation/bloc/: file_upload_bloc.dart  file_upload_event.dart  file_upload_state.dart
lib/admin_dashboard/presentation/pages/: admin_home_page.dart  view_ammunitions_page.dart  view_firearms_page.dart
lib/admin_dashboard/presentation/widgets/: adaptive_option.dart  app_drawer.dart  header.dart  responsive_body.dart  section_title.dart
lib/armory/data/datasources/: armory_local_repository_impl.dart  armory_remote_datasource.dart
lib/armory/data/repositories/: armory_sync_services.dart
lib/armory/domain/usecases/: initial_data_sync_usecase.dart  sync_local_to_remote_usecase.dart  sync_remote_to_local_usecase.dart
lib/armory/presentation/bloc/: armory_bloc.dart  armory_event.dart
lib/authentication/presentation/pages/: login_page.dart  signup_page.dart
lib/core/common_widgets/: custom_dropdown_field.dart  custom_textfield.dart
lib/core/config/: app_config.dart  app_decorations.dart
lib/core/enum/: session_enum.dart  tab_enums.dart
lib/core/error/: failures.dart
lib/core/routes/: app_pages.dart  app_routes.dart  locatore.dart  routes_services.dart
lib/core/theme/: app_theme.dart
lib/core/usecases/: usecase.dart
lib/core/utills/: check_internet.dart  custom_snackbar.dart
lib/src/core/app config/: device_config.dart
lib/src/core/enum/: tab_enums.dart
lib/user_dashboard/pages/: main_app_page.dart  placeholder_tabs.dart
linux/: CMakeLists.txt  my_application.cc
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner/Configs/: AppInfo.xcconfig
native_opencv/android/: CMakeLists.txt  build.gradle
native_opencv/android/gradle/wrapper/: gradle-wrapper.properties
native_opencv/ios/: native_opencv.podspec
native_opencv/ios/Classes/: FLED.cpp  FLED.h  FLED_drawAndWriteFunctions.cpp  Group.cpp  Logger.cpp  Logger.h  NativeOpencvPlugin.m  global_list.cpp  global_list.h  main.cpp  native_opencv.cpp  native_opencv_old.cpp  platform_log.cpp  platform_log.h  scorer.cpp  target_zone_detector.cpp  target_zone_detector.h
native_opencv/test/: native_opencv_test.dart
web/: index.html
windows/runner/: Runner.rc
(+497 files in other folders)
